<resources>
    <string name="app_name">Pets Missing or Found</string>
    <string name="Register">Register:</string>
    <string name="Fname">First name:</string>
    <string name="Lname">Last name:</string>
    <string name="Uname">User name:</string>
    <string name="Email">E-mail address:</string>
    <string name="Pnumber">Phone number:</string>
    <string name="Psw">Password:</string>
    <string name="PswCon">Password Confirmation:</string>
    <string name="Enter">Enter</string>
    <string name="Login">Log in:</string>
    <string name="Notreg">Not registered?</string>
    <string name="Report">Report a lost/found pet:</string>
    <string name="Pname">Pet name:</string>
    <string name="Pbreed">Pet breed:</string>
    <string name="Pdetails">Details:</string>
    <string name="Ppicture">Picture:</string>
    <string name="Llocation">Last location:</string>
    <string name="Pcontact">Contact</string>
    <string name="Pstatus">Status:</string>
    <string name="MyAdds">My adds:</string>
    <string name="Search">Search pets:</string>
    <string name="Searchhint">Search...</string>
    <string name="PetMap">Pets near by:</string>
    <string name="PetDetails">Pet details:</string>
    <string name="Plocation">Locations:</string>
    <string name="sMyAdds">My adds</string>
    <string name="sSearch">Search Pets</string>
    <string name="sReport">Report a lost/found pet</string>
    <string name="sShow">Show lost/found pets</string>
    <string name="sSignOut">Sign out</string>
    <string name="sWelcome">Welcome ! ! !</string>
    <string name="Upload">Upload</string>
    <string name="Show">Show</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="message">Message ...</string>
    <string name="Inbox">Inbox</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="sMyProfile">My profile</string>
    <string name="Users">Users</string>
    <string name="Admin">Admin interface:</string>
    <string name="Pets">Pets</string>
    <string name="SearchU">Search users:</string>
    <string name="delete">Delete</string>
    <string name="userhint">Enter user e-mail...</string>
    <string name="Mail">Enter e-mail ...</string>
    <string name="Password">Enter password ...</string>
    <string name="pnameHint">eg. Gnar</string>
    <string name="pbreedHint">eg. Cat</string>
    <string name="pdetailsHint">eg. yellow, with collar</string>
    <string name="pcontactHint">eg. 0956886690</string>
    <string name="nameHint">eg. Jane</string>
    <string name="lnameHint">eg. Doe</string>
    <string name="unameHint">eg. jdoe</string>
    <string name="emailHint">eg. jdoe@mail.com</string>
    <string name="numberHint">eg. 0952434252</string>
    <string name="pswHint">eg. Hsndsk55@</string>
    <string name="sCheckNotifications">Check  notifications</string>
    <string name="Pphone">Phone:</string>
    <string name="sUsers">Users</string>
    <string name="sPets">Pets</string>
    <string-array name="status_array">
        <item>Found</item>
        <item>Lost</item>
    </string-array>
</resources>
