<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/labelshadow"
    >
    <menu
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <item android:id="@+id/iMyAdds"
            android:title="@string/sMyAdds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <item android:id="@+id/iSearchP"
            android:title="@string/sSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <item android:id="@+id/iReport"
            android:title="@string/sReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <item android:id="@+id/iShow"
            android:title="@string/sShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </menu>
</RelativeLayout>