<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/catreg"
    android:gravity="center">
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="@dimen/Title"
        android:textColor="@color/label"
        android:background="@color/labelshadow" />
    <TextView
        android:id="@+id/tvFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fname"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lname"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvUname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Uname"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etUname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pnumber"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>

    <EditText
        android:id="@+id/etPnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Psw"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPswCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PswCon"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etPswCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:textColor="@color/label"
        android:background="@color/button"/>



</LinearLayout>