<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/labelshadow"
    >
    <TextView
        android:id="@+id/tvReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Report"
        android:textSize="@dimen/Title"
        android:textColor="@color/label"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/tvPname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pname"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvReport"
        />
    <EditText
        android:id="@+id/etPname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPname"/>
    <TextView
        android:id="@+id/tvPbreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pbreed"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/etPname"
        />
    <EditText
        android:id="@+id/etPbreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPbreed"/>
    <TextView
        android:id="@+id/tvPdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pdetails"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/etPbreed"
        />
    <EditText
        android:id="@+id/etPdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:inputType="textMultiLine"
        android:layout_below="@id/tvPdetails"/>
    <TextView
        android:id="@+id/tvPpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ppicture"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/etPdetails"
        />
    <ImageButton
        android:id="@+id/bAddPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/add_picture"
        android:scaleType="centerCrop"
        android:layout_below="@id/etPdetails"
        android:layout_alignRight="@id/tvPpicture"/>

    <TextView
        android:id="@+id/tvLlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Llocation"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/bAddPic"
        />
    <ImageButton
        android:id="@+id/bAddLocation"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/add_location"
        android:scaleType="centerCrop"
        android:layout_below="@id/bAddPic"
        android:layout_alignRight="@id/tvLlocation"/>
    <TextView
        android:id="@+id/tvPcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pcontact"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/bAddLocation"
        />
    <EditText
        android:id="@+id/etPcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPcontact"/>
    <TextView
        android:id="@+id/tvPstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pstatus"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/etPcontact"
        />
    <Spinner
        android:id="@+id/sStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPstatus"/>
    <Button
        android:id="@+id/bReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:textColor="@color/label"
        android:background="@color/button"
        android:layout_below="@id/sStatus"
       />

</RelativeLayout>
</ScrollView>