<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/doglogin"
    android:gravity="center"
    android:paddingTop="@dimen/Titlepadding">
    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="@dimen/Title"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <TextView
        android:id="@+id/tvUnameLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Uname"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etUnameLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPswLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Psw"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:background="@color/labelshadow"/>
    <EditText
        android:id="@+id/etPswLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/label"/>
    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:textColor="@color/label"
        android:background="@color/button"/>

</LinearLayout>