<?xml version="1.0" encoding="utf-8"?>
<hr.ferit.kslovic.petsmissingorfound.Models.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:background="@color/labelshadow"
   >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin10"
    android:layout_marginRight="@dimen/margin10"
    >
    <TextView
        android:id="@+id/tvPetDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PetDetails"
        android:textSize="@dimen/Title"
        android:textColor="@color/label"
        />
   <ImageButton
       android:id="@+id/ibPetDetails"
       android:layout_width="@dimen/picdimen"
       android:layout_height="@dimen/picdimen"
       android:layout_below="@id/tvPetDetails"
       android:scaleType="centerCrop"
       android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvPname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pname"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/ibPetDetails"
        />
    <TextView
        android:id="@+id/tvnameP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/ibPetDetails"
        android:layout_toRightOf="@id/tvPname"
        android:layout_marginLeft="@dimen/margin30"
        />
    <TextView
        android:id="@+id/tvPbreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pbreed"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvnameP"
        />
    <TextView
        android:id="@+id/tvbreedP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvnameP"
        android:layout_toRightOf="@id/tvPbreed"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:id="@+id/tvPdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pdetails"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvPbreed"
        />
    <TextView
        android:id="@+id/tvdetailsP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvPdetails"
        />

    <Button
        android:id="@+id/bcontactP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:background="@color/button"
        android:text="@string/Pcontact"
        android:textColor="@color/label"
        android:layout_below="@id/tvdetailsP"
        />
    <TextView
        android:id="@+id/tvPstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pstatus"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/bcontactP"
        />
    <TextView
        android:id="@+id/tvstatusP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/bcontactP"
        android:layout_toRightOf="@id/tvPstatus"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:id="@+id/tvPlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Plocation"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvstatusP"
        />
    <LinearLayout
        android:id="@+id/llLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_below="@id/tvPlocation"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin10">
    <Button
        android:id="@+id/bPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textColor="@color/label"
        android:background="@color/button"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"/>
    <Button
        android:id="@+id/bNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/label"
        android:background="@color/button"
        android:paddingLeft="@dimen/margin10"
        android:paddingRight="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"

       />
    </LinearLayout>
    <ImageButton
        android:id="@+id/ibNewLoc"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/addlocation"
        android:layout_below="@id/llLocation"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <fragment
        android:id="@+id/fGoogleMap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/ibNewLoc"/>

</RelativeLayout>
    </hr.ferit.kslovic.petsmissingorfound.Models.CustomScrollView>