<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/labelshadow"
    tools:context="hr.ferit.kslovic.petsmissingorfound.ProfileActivity">
    <ImageView
        android:id="@+id/backg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/gnar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/labelshadow"

        >
        <TextView
            android:id="@+id/tvAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/label"
            android:text="@string/Admin"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:paddingBottom="20dp"
            android:layout_marginLeft="70dp"
            />

        <Button
            android:id="@+id/bUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:textSize="@dimen/Label"
            android:background="@color/button"
            android:layout_below="@id/tvAdmin"
            android:text="@string/Users"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"/>
        <Button
            android:id="@+id/bPets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:textSize="@dimen/Label"
            android:background="@color/button"
            android:layout_below="@id/bUsers"
            android:text="@string/Pets"
            android:layout_marginBottom="50dp"/>
        <Button
            android:id="@+id/bSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:textSize="@dimen/Label"
            android:background="@color/button"
            android:layout_below="@id/bPets"
            android:text="@string/sSignOut"
            android:layout_marginLeft="150dp"

            />

    </RelativeLayout>
</RelativeLayout>