<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/labelshadow"
    tools:context="hr.ferit.kslovic.petsmissingorfound.Activities.ProfileActivity">
    <ImageView
        android:id="@+id/backg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:gravity="center"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/labelshadow">
    <TextView
        android:id="@+id/tvFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:text="@string/Fname"
        android:paddingTop="250dp"
        android:paddingBottom="20dp"
        />
    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_toRightOf="@id/tvFname"
        android:paddingTop="250dp"
        android:paddingBottom="20dp"
        />
    <TextView
        android:id="@+id/tvLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:text="@string/Lname"
        android:layout_below="@id/tvFname"
        android:paddingBottom="20dp"
        />
    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_toRightOf="@id/tvLname"
        android:layout_below="@id/tvFname"
        />
    <TextView
        android:id="@+id/tvUname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:text="@string/Uname"
        android:layout_below="@id/tvLname"
        android:paddingBottom="20dp"
        />
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvLname"
        android:layout_toRightOf="@id/tvUname"
        />
    <TextView
        android:id="@+id/tvMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:text="@string/Email"
        android:layout_below="@id/tvUname"
        android:paddingBottom="20dp"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvUname"
        android:layout_toRightOf="@id/tvMail"
        />
    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:text="@string/Pnumber"
        android:layout_below="@id/tvMail"
        android:paddingBottom="20dp"
        />
    <TextView
        android:id="@+id/tvPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/Label"
        android:textColor="@color/label"
        android:layout_below="@id/tvMail"
        android:layout_toRightOf="@id/tvContact"
        />
<Button
    android:id="@+id/bContactEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/label"
    android:textSize="@dimen/Label"
    android:background="@color/button"
    android:layout_below="@id/tvContact"/>
</RelativeLayout>
</ScrollView>
</RelativeLayout>
